PROTON-629: Allow proton/delivery.h to be compiled as C89